# LeadsAPI

./: Procfile  README.md  build_files.sh  manage.py  requirements.txt  vercel.json
Leads/: LICENSE  build.sh  pyproject.toml  render.yaml
Leads/leads_app/: apps.py  models.py  urls.py
Leads/leads_app/migrations/: 0001_initial.py
Leads/leads_app/templates/email/: message-received.html  message-sent.html
Leads/leads_proj/: settings.py
leads_app/: serializer.py  views.py
leads_app/migrations/: 0001_initial.py
leads_app/templates/email/: message-received.html  message-sent.html  new-subscriber.html  welcome-subscriber.html
leads_proj/: asgi.py  settings.py  urls.py  wsgi.py
staticfiles/: staticfiles.json
